grit section end

--- a/index.html
+++ b/index.html
@@ -1690,10 +1690,88 @@
                             </div>
                         </div>
                     </div>
+                    <div class="products__wrapper--btn">
+                        <a href="#"><button>View All Products</button></a>
+                    </div>
                 </div>
             </div>
         </section>
         <!-- Section Products end-->
+        <!-- Section Featured start-->
+        <section id="featured">
+            <div class="container">
+                <div class="featured__wrapper">
+                    <div class="featured__wrapper--top">
+                        <p>
+                            <span></span>
+                            Featured
+                        </p>
+                        <h1>New Arrival</h1>
+                    </div>
+                    <div class="featured__wrapper--botton">
+                        <div class="featured__wrapper--botton--card1">
+                            <div class="featured__wrapper--botton--card1--img">
+                                <img src="./assets/imegs/grid-img1.png" alt="img">
+                            </div>
+                            <div class="featured__wrapper--botton--card1-titil">
+                                <h1>PlayStation 5</h1>
+                                <p>
+                                    Black and White version of the PS5 coming out on sale.
+                                </p>
+                                <h2>
+                                    Shop Now
+                                </h2>
+                            </div>
+                        </div>
+                        <div class="featured__wrapper--botton--card2">
+                            <div class="featured__wrapper--botton--card2--img">
+                                <img src="./assets/imegs/grid-img2-removebg-preview.png" alt="img">
+                            </div>
+                            <div class="featured__wrapper--botton--card2-titil">
+                                <h1>Women’s Collections</h1>
+                                <p>
+                                    Featured woman collections that give you another vibe.
+                                </p>
+                                <h2>
+                                    Shop Now
+                                </h2>
+                            </div>
+                        </div>
+                        <div class="featured__wrapper--botton--card3">
+                            <div class="featured__wrapper--botton--card3--img">
+                                <img src="./assets/imegs/grid-img3.png" alt="img">
+                            </div>
+                            <div class="featured__wrapper--botton--card3-titil">
+                                <h1>Speakers</h1>
+                                <p>
+                                    Amazon wireless speakers
+                                </p>
+                                <h2>
+                                    Shop Now
+                                </h2>
+                            </div>
+                            <div class="featured__wrapper--botton--card3--radus"></div>
+                        </div>
+                        <div class="featured__wrapper--botton--card4">
+                            <div class="featured__wrapper--botton--card4--img">
+                                <img src="./assets/imegs/grid-img4.png" alt="img">
+                            </div>
+                            <div class="featured__wrapper--botton--card4-titil">
+                                <h1>Perfume</h1>
+                                <p>
+                                    GUCCI INTENSE OUD EDP
+                                </p>
+                                <h2>
+                                    Shop Now
+                                </h2>
+                            </div>
+                            <div class="featured__wrapper--botton--card4--radus"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Section Featured end-->
     </main>
     <!-- main end -->
     <footer>
