section lest end

--- a/index.html
+++ b/index.html
@@ -1772,6 +1772,48 @@
             </div>
         </section>
         <!-- Section Featured end-->
+        <!-- Section  last start-->
+        <section id="lest">
+            <div class="container">
+                <div class="lest__wrapper">
+                    <div class="lest__wrapper--card">
+                        <img src="./assets/imegs/lest-icon1.svg" alt="icon">
+                        <h2>
+                            FREE AND FAST DELIVERY
+                        </h2>
+                        <p>
+                            Free delivery for all orders over $140
+                        </p>
+                    </div>
+                    <div class="lest__wrapper--card">
+                        <img src="./assets/imegs/lest-icon2.svg" alt="icon">
+                        <h2>
+                            24/7 CUSTOMER SERVICE
+                        </h2>
+                        <p>
+                            Friendly 24/7 customer support
+                        </p>
+                    </div>
+                    <div class="lest__wrapper--card">
+                        <img src="./assets/imegs/lest-icon3.svg" alt="icon">
+                        <h2>
+                            MONEY BACK GUARANTEE
+                        </h2>
+                        <p>
+                            We reurn money within 30 days
+                        </p>
+                    </div>
+                </div>
+                <a href="#" class="lest--a">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                        fill="none">
+                        <path d="M12 20V4M5 11L12 4L19 11" stroke="black" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                    </svg>
+                </a>
+            </div>
+        </section>
+        <!-- Section last end-->
     </main>
     <!-- main end -->
     <footer>
