--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                 <a href="#" class="header__botton--wrapper--titl--list-link">About</a>
                             </li>
                             <li class="header__botton--wrapper--titl--list">
-                                <a href="#" class="header__botton--wrapper--titl--list-link">Sign Up</a>
+                                <a href="./pages/sigin-up-page/" class="header__botton--wrapper--titl--list-link">Sign Up</a>
                             </li>
                         </ul>
                         <div class="header__botton--wrapper--right">
@@ -1914,6 +1914,19 @@
                 </ul>
             </div>
         </div>
+        <section id="footer__botton">
+            <div class="footer__botton">
+                <svg xmlns="http://www.w3.org/2000/svg" width="19" height="20" viewBox="0 0 19 20" fill="none">
+                    <path
+                        d="M9.50008 18.3333C14.1025 18.3333 17.8334 14.6023 17.8334 9.99996C17.8334 5.39759 14.1025 1.66663 9.50008 1.66663C4.89771 1.66663 1.16675 5.39759 1.16675 9.99996C1.16675 14.6023 4.89771 18.3333 9.50008 18.3333Z"
+                        stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    <path
+                        d="M12.0001 8.14811C12.0001 8.14811 10.9707 6.66663 9.25498 6.66663C7.5393 6.66663 6.16675 8.14811 6.16675 9.99996C6.16675 11.8518 7.5393 13.3333 9.25498 13.3333C10.9707 13.3333 12.0001 11.8518 12.0001 11.8518"
+                        stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+                <a href="#">Copyright Rimel 2022. All right reserved</a>
+            </div>
+        </section>
     </footer>
     <!-- footer end -->
 </body>
