--- a/pages/login-page/index.html
+++ b/pages/login-page/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +7,6 @@
     <link rel="stylesheet" href="../../css/style.min.css" />
     <title>ECOMMERCE-SITE</title>
 </head>
-
 <body>
     <!-- -------- Header start  ------- -->
     <header>
@@ -179,40 +177,35 @@
         </section>
     </header>
     <!-- -------- Header end  ------- -->
-    <!-- main start -->
+    <!-- main starrt -->
     <main>
-        <!--  Sigin Up  section intro start  -->
-        <section id="siginup__intro">
-            <div class="container siginup--intro--wrapper">
-                <div class="siginup--intro--wrapper--left">
+        <!--  login  section intro start  -->
+        <section id="login__intro">
+            <div class="container login--intro--wrapper">
+                <div class="login--intro--wrapper--left">
                     <div></div>
                     <img src="../../assets/imegs/loginup-img1.jpg" alt="img">
                 </div>
-                <div class="siginup--intro--wrapper--right">
-                    <h1>Create an account</h1>
+                <div class="login--intro--wrapper--right">
+                    <h1>Log in to Exclusive</h1>
                     <p>Enter your details below</p>
                     <form action="https://echo.htmlacademy.ru/">
-                        <input type="text" name="Name" placeholder="Name">
                         <input type="email" name="email" placeholder="Email or Phone Number">
                         <input type="password" name="password" placeholder="Password">
-                        <button type="submit">Create Account</button>
-                        <button class="googl-btn">
-                            <img src="../../assets/imegs/Icon-Google.svg" alt="Icon-Google">
-                            Sign up with Google
-                        </button>
-                        <p>
-                            <span>Already have account?</span>
-                            <a href="../login-page/">Log in</a>
-                        </p>
+                        <div>
+                            <button type="submit">Log In</button>
+                            <p>Forget Password?</p>
+                        </div>
+                        
                     </form>
                 </div>
             </div>
         </section>
-        <!--  Sigin Up  section intro end -->
+        <!--  login  section intro end -->
     </main>
     <!-- main end -->
-    <!-- footer start -->
-    <footer>
+     <!-- footer start -->
+     <footer>
         <div class="container">
             <div class="footer__top">
                 <ul class="footer__top--titil">
@@ -326,5 +319,4 @@
     </footer>
     <!-- footer end -->
 </body>
-
 </html>
