--- a/pages/wishlist-page/index.html
+++ b/pages/wishlist-page/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +7,6 @@
     <link rel="stylesheet" href="../../css/style.min.css" />
     <title>ECOMMERCE-SITE</title>
 </head>
-
 <body>
     <!-- -------- Header start  ------- -->
     <header>
@@ -180,36 +178,7 @@
     </header>
     <!-- -------- Header end  ------- -->
     <!-- main start -->
-    <main>
-        <!--  Sigin Up  section intro start  -->
-        <section id="siginup__intro">
-            <div class="container siginup--intro--wrapper">
-                <div class="siginup--intro--wrapper--left">
-                    <div></div>
-                    <img src="../../assets/imegs/loginup-img1.jpg" alt="img">
-                </div>
-                <div class="siginup--intro--wrapper--right">
-                    <h1>Create an account</h1>
-                    <p>Enter your details below</p>
-                    <form action="https://echo.htmlacademy.ru/">
-                        <input type="text" name="Name" placeholder="Name">
-                        <input type="email" name="email" placeholder="Email or Phone Number">
-                        <input type="password" name="password" placeholder="Password">
-                        <button type="submit">Create Account</button>
-                        <button class="googl-btn">
-                            <img src="../../assets/imegs/Icon-Google.svg" alt="Icon-Google">
-                            Sign up with Google
-                        </button>
-                        <p>
-                            <span>Already have account?</span>
-                            <a href="../login-page/">Log in</a>
-                        </p>
-                    </form>
-                </div>
-            </div>
-        </section>
-        <!--  Sigin Up  section intro end -->
-    </main>
+    <main></main>
     <!-- main end -->
     <!-- footer start -->
     <footer>
@@ -326,5 +295,4 @@
     </footer>
     <!-- footer end -->
 </body>
-
 </html>
