--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             </div>
                             <div class="header__botton--wrapper--right--icons">
                                 <div class="header__botton--wrapper--right--icons--icon1">
-                                    <a href="#">
+                                    <a href="./pages/wishlist-page/">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                             viewBox="0 0 32 32" fill="none">
                                             <path
