--- a/pages/wishlist-page/index.html
+++ b/pages/wishlist-page/index.html
@@ -70,7 +70,7 @@
                                     </a>
                                 </div>
                                 <div class="header__botton--wrapper--right--icons--icon2">
-                                    <a href="#">
+                                    <a href="../cart-page/">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                             viewBox="0 0 32 32" fill="none">
                                             <path
