Chec Out page full end

--- a/pages/chec-out/index.html
+++ b/pages/chec-out/index.html
@@ -250,6 +250,63 @@
                                 Save this information for faster check-out next time
                             </p>
                         </div>
+                        <div class="checout__intro--wrzpper--form--right">
+                            <ul class="checout__intro--wrzpper--form--right--itim">
+                                <li class="checout__intro--wrzpper--form--right--itim--list">
+                                    <p>
+                                        <img src="../../assets/imegs/cart-img2.png" alt="img">
+                                        LCD Monitor
+                                    </p>
+                                    <p>$650</p>
+                                </li>
+                                <li class="checout__intro--wrzpper--form--right--itim--list">
+                                    <p>
+                                        <img src="../../assets/imegs/cart-img1.png" alt="img">
+                                        H1 Gamepad
+                                    </p>
+                                    <p>$1100</p>
+                                </li>
+                                <li class="checout__intro--wrzpper--form--right--itim--list">
+                                    <p>Subtotal:</p>
+                                    <p>$1750</p>
+                                </li>
+                                <li class="checout__intro--wrzpper--form--right--itim--list">
+                                    <p>Shipping:</p>
+                                    <p>Free</p>
+                                </li>
+                                <li class="checout__intro--wrzpper--form--right--itim--list">
+                                    <p>Total:</p>
+                                    <p>$1750</p>
+                                </li>
+                                <li class="checout__intro--wrzpper--form--right--itim--list">
+                                    <p>
+                                        <input type="radio" class="radio">
+                                        Bank
+                                    </p>
+                                    <div>
+                                        <img src="../../assets/imegs/checout-img1.png" alt="banc-logo">
+                                        <img src="../../assets/imegs/checout-img2.png" alt="banc-logo">
+                                        <img src="../../assets/imegs/checout-img3.png" alt="banc-logo">
+                                        <img src="../../assets/imegs/checout-img4.png" alt="banc-logo">
+                                    </div>
+                                </li>
+                                <li class="checout__intro--wrzpper--form--right--itim--list">
+                                    <p>
+                                        <input type="radio" class="radio">
+                                        Cash on delivery
+                                    </p>
+                                </li>
+                                <li class="checout__intro--wrzpper--form--right--itim--list">
+                                    <p>
+                                        <input type="text" placeholder="Coupon Code">
+                                        <button>Apply Coupon</button>
+                                    </p>
+                                </li>
+                                <li class="checout__intro--wrzpper--form--right--itim--list">
+                                    <button type="submit">Place Order</button>
+                                </li>
+                            </ul>
+                        </div>
                     </form>
                 </div>
             </div>
